# tinyproxy

./: .gitignore  .travis.yml  AUTHORS  BUGS  ChangeLog  Dockerfile  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.md  SECURITY.md  THANKS  TODO  VERSION  acconfig.h  acinclude.m4  aclocal.m4  authors.dtd  authors.xml  authors.xsl  autogen.sh  bootstrap  build.zig  configure  configure.ac  configure.in  mkinstalldirs  tinyproxy-indent.sh
.github/ISSUE_TEMPLATE/: new-issue--bug-report--question.md
.github/workflows/: main.yml  release_tarball.yml  shellcheck.yaml
adns-0.6/: INSTALL  Makefile.in  README  TODO  acconfig.h  aclocal.m4  changelog  configure  configure.in  settings.make.in
adns-0.6/client/: .cvsignore  Makefile.in  adh-main.c  adh-opts.c  adh-query.c  adnshost.h  adnslogres.c  adnsresfilter.c  adnstest.c  fanftest.c  x.gdb
adns-0.6/dynamic/: .cvsignore  Makefile.in
adns-0.6/regress/: .cvsignore  Makefile.in  addcases  case-1stservbroken.out  case-1stservbroken.sys  case-1stservtotcp.out  case-1stservtotcp.sys  case-2ndservok.out  case-2ndservok.sys  case-2ndservtcp.out  case-2ndservtcp.sys  case-abbrev.out  case-abbrev.sys  case-abbrevto.out  case-abbrevto.sys  case-brokenmail.out  case-brokenmail.sys  case-child.out  case-child.sys  case-cnametocname.out  case-cnametocname.sys  case-datapluscname.out  case-datapluscname.sys  case-datapluscnamewait.out  case-datapluscnamewait.sys  case-flags10.err  case-flags10.out  case-flags10.sys  case-flags9.out  case-flags9.sys  case-mailboxes.out  case-mailboxes.sys  case-manya.out  case-manya.sys  case-manyptrwrong.out  case-manyptrwrong.sys  case-manyptrwrongrem.out  case-manyptrwrongrem.sys  case-manyptrwrongrst.out  case-manyptrwrongrst.sys  (+64 more)
adns-0.6/src/: Makefile.in  adns.h  adns.make  check.c  config.h.in  dlist.h  event.c  general.c  internal.h  parse.c  poll.c  query.c  reply.c  setup.c  transmit.c  tvarith.h  types.c
config/: .gitignore  typecheck.m4
data/: Makefile.am
data/templates/: Makefile.am  debug.html  default.html  metrics  prometheus.txt  stats-json.html  stats.html  stats.txt
doc/: .gitignore  CONFIG  HTML_VARIABLES  HTTP_ERROR_CODES  Makefile.am  Makefile.in  TODO  debug.html  default.html  filter-howto.txt  http-rfcs.txt  report.sh  report.sh.tmpl  stats.html  tinyproxy.8  tinyproxy.conf
doc/man8/: .gitignore  Makefile.am  tinyproxy.8  tinyproxy.txt  tinyproxy.txt.in
docs/: Makefile.am  filter-howto.txt
docs/man5/: .gitignore  Makefile.am  tinyproxy.conf.txt.in
docs/man8/: .gitignore  Makefile.am  tinyproxy.txt.in
docs/web/: Makefile  podhtml-filter.awk  tp.html.foot  tp.html.head
docs/web/stylesheets/: stylesheet.css
etc/: .gitignore  Makefile.am  tinyproxy.conf  tinyproxy.conf.in
extras/: Makefile.am
extras/systemd/: Makefile.am  tinyproxy.service  tinyproxy.tmpfile
m4macros/: Makefile.am  argenable.m4  as-compiler-flag.m4
packaging/: Makefile.am
packaging/fedora/: .gitignore  Makefile.am  tinyproxy.init  tinyproxy.spec  tinyproxy.spec.in
packaging/redhat/: tinyproxy-1.5.2-config-patch  tinyproxy-initd  tinyproxy.spec
rpm/: tinyproxy.spec
scripts/: Makefile.am  gen-authors.sh  version.sh
snap/: snapcraft.yaml
snap/src/tinyproxy/conf/: tinyproxy.conf.template
snap/src/tinyproxy/script/: run-tinyproxy  settings
src/: .cvsignore  .gitignore  Makefile.am  Makefile.in  acl.c  acl.h  anonymous.c  anonymous.h  authors.c  authors.h  authors.xsl  base64.c  base64.h  basicauth.c  basicauth.h  buffer.c  buffer.h  cap.c  cap.h  child.c  child.h  common.h  conf-tokens.c  conf-tokens.gperf  conf-tokens.h  conf.c  conf.h  conf_regex.h  conf_regex.rl  conf_regex_print.c  conffile.c  conffile.h  config.h  connect-ports.c  connect-ports.h  conns.c  conns.h  daemon.c  daemon.h  defines.h.in  (+76 more)
tests/: Makefile.am
tests/scripts/: Makefile.am  run_tests.sh  run_tests_valgrind.sh  webclient.pl  webserver.pl
